<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <RingtonePreference
        android:key="@string/settings_alarm_ringtone_key"
        android:title="@string/settings_alarm_ringtones_title"
        android:summary="@string/settings_alarm_ringtones_sum"
        android:ringtoneType="alarm|ringtone"
        android:showSilent="false"
        android:showDefault="true"
        android:layout="@layout/custom_preference"/>

    <VolumePreference
        android:key="@string/settings_alarm_volume_key"
        android:title="@string/settings_alarm_volume"
        android:summary="@string/settings_alarm_volume_sum"
        android:defaultValue="@string/settings_alarm_volume_default"
        android:dialogTitle="@string/settings_alarm_volume_title"
        android:layout="@layout/custom_preference"/>

    <ListPreference
        android:key="@string/settings_alarm_duration_key"
        android:title="@string/settings_alarm_duration"
        android:summary="@string/settings_alarm_duration_sum"
        android:dialogTitle="@string/settings_alarm_duration_title"
        android:entries="@array/alarm_duration"
        android:entryValues="@array/alarm_duration_values"
        android:defaultValue="@string/settings_alarm_duration_default"
        android:layout="@layout/custom_preference"/>

    <ListPreference
        android:title="@string/settings_about"
        android:summary="@string/settings_about_sum"
        android:dialogTitle="@string/settings_about_todolist"
        android:dialogMessage="@string/about_todolist"
        android:entries="@array/dummy"
        android:entryValues="@array/dummy_values"
        android:layout="@layout/custom_preference"/>

</PreferenceScreen>