<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_schedule_type"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule_type_all"
            android:icon="@drawable/ic_drawer_type_all_24dp"
            android:title="@string/schedule_type_all" />
        <item
            android:id="@+id/nav_schedule_type_meeting"
            android:icon="@drawable/ic_drawer_type_meeting_24dp"
            android:title="@string/schedule_type_meeting" />
        <item
            android:id="@+id/nav_schedule_type_entertainment"
            android:icon="@drawable/ic_drawer_type_ent_24dp"
            android:title="@string/schedule_type_entertainment" />
        <item
            android:id="@+id/nav_date"
            android:icon="@drawable/ic_drawer_type_date_24dp"
            android:title="@string/schedule_type_date" />
        <item
            android:id="@+id/nav_done"
            android:icon="@drawable/ic_drawer_done_24dp"
            android:title="@string/schedule_done" />
    </group>

    <group
        android:id="@+id/group_function"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settings_24dp"
            android:title="@string/action_settings" />
    </group>

</menu>
